syntax = "proto3";

option go_package = "github.com/emaanmohamed/order-management-system/";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
//    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
//    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
//    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);

}
message Order {
  int32 OrderID = 1;
  int32 CustomerID = 2;
  int32 ProductID = 3;
  int32 Quantity = 4;
}

message CreateOrderRequest {
   int32 customerId = 1;
   int32 productId = 2;
   int32 quantity = 3;
}

message CreateOrderResponse {
  string status = 1;
}


message GetOrdersRequest {
  int32 customerID = 1;
}

message GetOrderResponse {
  repeated Order orders = 1;
}